Activate promo from inactive status with no kafka queue
